--- a/task2/package.json
+++ b/task2/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "types": "moduel",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
